test/functions/bradc/varFns/declVarRetNothingFromNonVoidFn.good
declVarRetNothingFromNonVoidFn.chpl:1: In function 'p':
declVarRetNothingFromNonVoidFn.chpl:1: error: control reaches end of function that returns a value
