test/functions/bradc/varFns/declVarRetNothingFromNonVoidFn.chpl
proc p() ref : int {

}
p();
